--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.password=3935915
 
 spring.thymeleaf.enable-spring-el-compiler=true
 spring.thymeleaf.extras.springsecurity6.enabled=true
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=panivan98@yandex.ru
+spring.mail.password=ltyluerlnpfzjsph
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
