Заменил некоторые явно прописанные свойства в .properties на использование переменных среды.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pah_monitoring
-spring.datasource.username=postgres
-spring.datasource.password=3935915
+spring.datasource.url=${DB_HOST}:${DB_PORT}/pah_monitoring
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.thymeleaf.enable-spring-el-compiler=true
 spring.thymeleaf.extras.springsecurity6.enabled=true
 
 spring.mail.host=smtp.yandex.ru
-spring.mail.username=panivan98@yandex.ru
-spring.mail.password=ltyluerlnpfzjsph
+spring.mail.username=${APPLICATION_EMAIL}
+spring.mail.password=${APPLICATION_EMAIL_PASSWORD}
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
