Добавил строку для того, чтобы Spring разрешил циклические зависимости.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.mail.password=${APPLICATION_EMAIL_PASSWORD}
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
+spring.main.allow-circular-references=true
