Добавил токен и URL для работы с API реестра медицинских учреждений РФ.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.mail.protocol=smtps
 mail.debug=true
 
 spring.main.allow-circular-references=true
+
+my.registry-api.base-url=http://nsi.rosminzdrav.ru/port/rest/data?identifier=1.2.643.5.1.13.13.11.1461
+my.registry-api.token=${REGISTRY_TOKEN}
