Поправил значения в properties для работы с API реестра.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,6 @@ mail.debug=true
 
 spring.main.allow-circular-references=true
 
-my.registry-api.base-url=http://nsi.rosminzdrav.ru/port/rest/data?identifier=1.2.643.5.1.13.13.11.1461
+my.registry-api.base-url=http://nsi.rosminzdrav.ru/port/rest/data
+my.registry-api.registry-identifier=1.2.643.5.1.13.13.99.2.1114
 my.registry-api.token=${REGISTRY_API_TOKEN}
