--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,7 @@ my.registry-api.base-url=http://nsi.rosminzdrav.ru/port/rest/data
 my.registry-api.registry-identifier=1.2.643.5.1.13.13.99.2.1071
 my.registry-api.token=${REGISTRY_API_TOKEN}
 
+my.email.enabled=false
+
 my.scheduled.rate.expired-code-deletion=5000
 my.scheduled.rate.patient-awarding=10000
