--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ mail.debug=true
 
 spring.main.allow-circular-references=true
 
+logging.file.name=logs/log.log
+
 my.registry-api.base-url=http://nsi.rosminzdrav.ru/port/rest/data
 my.registry-api.registry-identifier=1.2.643.5.1.13.13.11.1461
 my.registry-api.token=${REGISTRY_API_TOKEN}
