Исправил ошибку при ссылке на анамнез в профиле пациента. Временно отключил рассылку сообщений на почту, так как достаточно их протестировал.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ my.registry-api.base-url=http://nsi.rosminzdrav.ru/port/rest/data
 my.registry-api.registry-identifier=1.2.643.5.1.13.13.11.1461
 my.registry-api.token=${REGISTRY_API_TOKEN}
 
-my.email.enabled=true
+my.email.enabled=false
 
 my.scheduled.rate.expired-code-deletion=10000
 my.scheduled.rate.patient-awarding=25000
