В файл свойств добавил свойства для работы с файлами: максимальный размер, разрешённые расширения и путь, по которому загружаются файлы.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.main.allow-circular-references=true
 
 logging.file.name=logs/log.log
 
+spring.servlet.multipart.max-file-size=10MB
+
 my.registry-api.base-url=http://nsi.rosminzdrav.ru/port/rest/data
 my.registry-api.registry-identifier=1.2.643.5.1.13.13.11.1461
 my.registry-api.token=${REGISTRY_API_TOKEN}
@@ -24,3 +26,6 @@ my.email.enabled=false
 
 my.scheduled.rate.expired-code-deletion=10000
 my.scheduled.rate.patient-awarding=25000
+
+my.file.upload-path=D:\\Server Uploads\\pah_monitoring
+my.file.allowed-extensions=pdf
