Добавил конфиг-класс для сопоставления URL и папки, в которой хранятся файлы. Поправил security-конфиг, поправил путь до папки в файле свойств.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,5 @@ my.email.enabled=false
 my.scheduled.rate.expired-code-deletion=10000
 my.scheduled.rate.patient-awarding=25000
 
-my.file.upload-path=D:\\Server Uploads\\pah_monitoring
+my.file.upload-path=D:/Server Uploads/pah_monitoring
 my.file.allowed-extensions=pdf
